
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u8 ;


 int read_bitmem (int *,int,int *,int) ;
 int read_unreal_index (int *,int*) ;

int read_unrnum(int *num, u8 *buff, int bits) {
    u8 mini[5];

    *num = 0;
    read_bitmem(buff, 5, mini, bits);
    return(bits + (read_unreal_index(mini, num) << 3));
}
