; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_32086.c_read_unrnum.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/multiple/dos/extr_32086.c_read_unrnum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @read_unrnum(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca [5 x i32], align 16
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32*, i32** %4, align 8
  store i32 0, i32* %8, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = getelementptr inbounds [5 x i32], [5 x i32]* %7, i64 0, i64 0
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @read_bitmem(i32* %9, i32 5, i32* %10, i32 %11)
  %13 = load i32, i32* %6, align 4
  %14 = getelementptr inbounds [5 x i32], [5 x i32]* %7, i64 0, i64 0
  %15 = load i32*, i32** %4, align 8
  %16 = call i32 @read_unreal_index(i32* %14, i32* %15)
  %17 = shl i32 %16, 3
  %18 = add nsw i32 %13, %17
  ret i32 %18
}

declare dso_local i32 @read_bitmem(i32*, i32, i32*, i32) #1

declare dso_local i32 @read_unreal_index(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
